syntax = "proto3";

package productproto;

option go_package = "contract/goproto/productproto";

service ProductService {
  rpc Product(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  string product_code = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string code = 3;
  double price = 4;
}
